clusters/KC-Int/deployments/default/lubelogger/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: lubelogger
spec:
    selector:
        app: lubelogger
    ports:
        - name: lubelogger-http
          port: 8080
